changed message create datetime timezone to Bangkok
updated the poll vote template

--- a/app/templates/besttime/poll-form.html
+++ b/app/templates/besttime/poll-form.html
@@ -78,7 +78,7 @@
                             </div>
                             <br/>
                             <p>
-                                <strong><small>{{message.voter.fullname}}</small></strong> <small>@{{message.created_at|localdatetime}}</small>
+                                <strong><small>{{message.voter.fullname}}</small></strong> <small>{{message.created_at|localdatetime}}</small>
                             </p>
                         </div>
                     </article>
