added mtpr service link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -356,6 +356,12 @@
                         </span>
                         <span class="is-size-5">ระบบรับแจ้งและติดตามข้อร้องเรียนและปัญหา</span>
                     </a>
+                    <a href="https://mt.mahidol.ac.th/prservice_system/" class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fas fa-clipboard-list"></i>
+                        </span>
+                        <span class="is-size-5">ระบบขอรับบริการงานประชาสัมพันธ์ฯ</span>
+                    </a>
                 </nav>
                 <nav class="panel is-info">
                     <p class="panel-heading">Analytics</p>
