--- a/app/templates/service_admin/view_quotation.html
+++ b/app/templates/service_admin/view_quotation.html
@@ -45,7 +45,7 @@
                         <div class="mb-4 is-flex is-align-items-center">
                             <p class="subtitle is-6 mb-1 has-text-weight-semibold">เรื่อง</p>
                             <div style="margin-left: 1.75rem;">
-                                ใบเสนอราคาค่าบริการตรวจวิเคราะห์ทางห้องปฏิบัติการ
+                                ใบเสนอราคาค่าบริการตรวจวิเคราะห์ทางห้องปฏิบัติการ{{ quotation.request.sub_lab.lab.lab }}
                             </div>
                         </div>
                         <div class="mb-4 is-flex is-align-items-center">
