--- a/app/templates/academic_services/view_invoice.html
+++ b/app/templates/academic_services/view_invoice.html
@@ -36,7 +36,7 @@
                         <div class="mb-4 is-flex is-align-items-center">
                             <p class="subtitle is-6 mb-1 has-text-weight-semibold">เรื่อง</p>
                             <div style="margin-left: 1.75rem;">
-                                ใบแจ้งหนี้ค่าบริการตรวจวิเคราะห์ทางห้องปฏิบัติการ
+                                ใบแจ้งหนี้ค่าบริการตรวจวิเคราะห์ทางห้องปฏิบัติการ{{ invoice.quotation.request.sub_lab.lab.lab }}
                             </div>
                         </div>
                         <div class="mb-4 is-flex is-align-items-center">
