Edited show datatable in quotation_index template of service_admin templates

--- a/app/templates/academic_services/quotation_index.html
+++ b/app/templates/academic_services/quotation_index.html
@@ -45,7 +45,7 @@
                     <thead>
                         <th>เลขใบเสนอราคา</th>
                         <th>วันที่ออก</th>
-                        <th>ราคา</th>
+                        <th>ยอดเงิน</th>
                         <th>หมายเหตุ</th>
                         <th>สถานะ</th>
                         <th>รายละเอียด</th>
