Edited size top content ul in view_Request template of academic_services and service_admin templates

--- a/app/templates/service_admin/quotation_index.html
+++ b/app/templates/service_admin/quotation_index.html
@@ -89,7 +89,7 @@
                     <thead>
                     <th style="width: 9em">ข้อมูลใบเสนอราคา</th>
                     <th>อ้างอิงเลขใบคำขอ</th>
-                    <th>ออกในนาม / ผู้ประสานงาน</th>
+                    <th>ออกในนาม</th>
                     <th>ยอดเงิน</th>
                     <th>หมายเหตุ</th>
                     <th>ออกโดย</th>
