--- a/app/templates/academic_services/view_request.html
+++ b/app/templates/academic_services/view_request.html
@@ -2,17 +2,16 @@
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/@sweetalert2/theme-bulma@5/bulma.css"/>
-{#    <style>#}
-{#        .menu-list li {#}
-{#            font-size: 0.85rem;#}
-{#            font-weight: 400;#}
-{#            color: #4a4a4a;#}
-{#        }#}
-{##}
-{#        .content ul {#}
-{#            margin-top: 0.15em;#}
-{#        }#}
-{#    </style>#}
+    <style>
+        {#.menu-list li {#}
+        {#    font-size: 0.85rem;#}
+        {#    font-weight: 400;#}
+        {#    color: #4a4a4a;#}
+
+        .content ul {
+            margin-top: 0.15em;
+        }
+    </style>
 {% endblock %}
 {% block page_content %}
     {% include "academic_services/customer_nav.html" %}
