--- a/app/templates/academic_services/sample_index.html
+++ b/app/templates/academic_services/sample_index.html
@@ -129,7 +129,7 @@
                                             {{ sample.sample_condition_status }}
                                         </span>
                                     {% else %}
-                                        <span class="tag is-danger">
+                                        <span class="tag is-danger is-light">
                                             ยังไม่ได้ส่งตัวอย่าง
                                         </span>
                                     {% endif %}
@@ -140,7 +140,7 @@
                                             {{ sample.get_file.status }}
                                         </span>
                                     {% else %}
-                                        <span class="tag is-danger">
+                                        <span class="tag is-danger is-light">
                                             ยังไม่ได้ส่งเอกสาร
                                         </span>
                                     {% endif %}
@@ -158,38 +158,9 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <ul class="steps">
-                                        <li class="steps-segment {% if not sample.appointment_date and not sample.tracking_number %} is-active {% endif %}">
-                                            <span class="steps-marker">
-                                                <span class="icon">
-                                                    <i class="fas fa-calendar"></i>
-                                                </span>
-                                            </span>
-                                            <div class="steps-content">
-                                                <p>ยังไม่ได้นัดหมายส่งตัวอย่าง</p>
-                                            </div>
-                                        </li>
-                                        <li class="steps-segment {% if (sample.appointment_date or sample.tracking_number) and not sample.received_at %} is-active {% endif %}">
-                                            <span class="steps-marker">
-                                                <span class="icon">
-                                                    <i class="fas fa-shipping-fast"></i>
-                                                </span>
-                                            </span>
-                                            <div class="steps-content">
-                                                <p>รอส่งตัวอย่าง</p>
-                                            </div>
-                                        </li>
-                                        <li class="steps-segment {% if sample.received_at %} is-active {% endif %}">
-                                            <span class="steps-marker">
-                                                <span class="icon">
-                                                    <i class="fa fa-check"></i>
-                                                </span>
-                                            </span>
-                                            <div class="steps-content">
-                                                <p>ส่งตัวอย่างแล้ว</p>
-                                            </div>
-                                        </li>
-                                    </ul>
+                                    <span class="tag {{ sample.customer_status_color }}">
+                                        {{ sample.customer_status }}
+                                    </span>
                                 </td>
                                 <td>
                                     {% if not sample.received_at %}
