--- a/app/templates/academic_services/view_quotation.html
+++ b/app/templates/academic_services/view_quotation.html
@@ -160,7 +160,7 @@
                                     {% endif %}
                                     <li>
                                         <a class="button is-info is-outlined is-rounded is-small is-fullwidth"
-                                           href="{{ url_for('service_admin.export_quotation_pdf', quotation_id=quotation_id) }}"
+                                           href="{{ url_for('academic_services.export_quotation_pdf', quotation_id=quotation_id) }}"
                                         >
                                             <span class="icon"><i class="fas fa-download"></i></span>
                                             <span>ดาวน์โหลดใบเสนอราคา</span>
