Edited location url in admin_index template of software_request templates

--- a/app/templates/software_request/admin_index.html
+++ b/app/templates/software_request/admin_index.html
@@ -161,7 +161,7 @@
                 eventLimit: true,
                 lazyFetching: true,
                 eventClick: function (calEvent, jsEvent, view) {
-                    window.location = '/software_request/timelines/' + calEvent.id;
+                    window.location = '/software_request/timelines/' + calEvent.id + '?tab=' + '{{ tab }}';
                 }
             });
         });
